less/app.less
/* ... */
@media (min-width: @screen-sm){
    // .header-wrapper {
    //  padding: 0 30px 20px 30px;
    // }

    .book-container {
        display: table;
        width: 100%;
        padding-top:25px;

        .top-row,
        .grid-row {
            display: table-row;
        }

        .spacer,
        .title-area,
        .tags-wrapper,
        .books-grid-wrapper {
            display: table-cell;
            vertical-align: top;
        }

        .spacer,
        .tags-wrapper {
            width: 200px;
            //text-align: right;

            h4 {
                vertical-align:top;
                font-size: 20px;
                line-height: 1.2;
                margin: 4px 0 0 0;
                clear: both;
                color: #333333;
                position: relative;
                -webkit-font-smoothing: antialiased;
                /*@media (max-width: 1200px){
                    padding-left:10px;
                }*/
            }

            .tags {
                li {
                    display: block;
                    text-align: right;
                }

            }
        }

        .title-area,
        .books-grid-wrapper {
            // padding-left: @grid-gutter-width;
            padding-left: 45px;
            // width:0%;
        }
    }
}

@media (max-width: 979px) {
    nav .site-links-2 { display: none; }
    footer {
        .primary { float: none; }
        .secondary ul, .secondary p { margin-left: 0; float: left; }
    }

    .modal-dialog {
        width: 90%;
    }
    .modal-text{
        margin-left:23%;
    }
    .modal-book-cover{
        width:20%;

    }
}


@media (max-width: 767px) {
    //nav, header, footer { margin-left: -20px; margin-right: -20px; }
    // nav .site-links { margin-left: 50px; }
    footer {
        .primary { display: none; }
        .secondary p { float: left; font-size: 9px; color: @pine-fade; }
        .secondary ul { float: right; }
        .secondary li { font-size: 9px; text-transform: none; }
        .secondary a { color: @pine-fade; }
    }

    .modal-book-cover {
        margin-top: 0;

        img{
            width: 250px;
            max-width: 100%;
            }
    }

    .modal-text{
        margin-left:0;
        padding-left:0;

        .modal-title {
            font-size: 19px;
            line-height: 1.1;
            margin-bottom: 5px;
        }
    }

    pre {
        font-size: 12px;
    }
}
@media (max-width: 480px) {
    section.the-goods { margin-top: 33px; }
    h1 { font-size: 26px; }
    #story-meta p { font-size: 11px; }
    // nav .site-links {
    //  li { display: none; }
    //  .npr { display: block; }
    // }
    header {
        h1 { font-size: 36px; }
        h2 { font-size: 24px; }
    }
    footer { border-top: 1px solid #CCC; }


    .modal-dialog {
        width: 95%;
    }

    .text {
        font-size: 14px;
    }


    .toggle-text{
        width:100%;
    }
    .grid.btn, .list.btn{
        width:0;
        width:50%;
    }
}

/**** Misc overrides ****/
.share-story a {
    color: white;
}
p.browse {
    text-align: center;
}

.instructable{
  position: fixed;
  left: 50%;
  margin-left: -60px;
  top: 200px;
  z-index: 3000;
  width: 120px;
  height: 120px;
  border-radius: 8px;
  background-color: rgba(128,128,128, .9);
  padding: 0;
  opacity: 0;

  p{
    text-align: center;
    color: #fff;
    font-size: 1.2em;
    margin-bottom: 0;

    i{
      font-size: 2.4em;
    }

    .instructions{
      margin-top: -10px;
    }

  }

}

